fix contrast for noteheading-text fallback (#342)

--- a/src/base.css
+++ b/src/base.css
@@ -909,7 +909,7 @@
 
 	.note::before, .note > .marker,
 	details.note > summary {
-		color: hsl(120, 70%, 30%);
+		color: hsl(120, 70%, 22%);
 		color: var(--noteheading-text);
 	}
 	/* Add .note::before { content: "Note "; } for autogen label,
